added store api service
