# api/quotestore-types.go
@@ -1,60 +1,0 @@
-// Package api provides primitives to interact the openapi HTTP API.
-//
-// Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
-package api
-
-// Tag defines model for Tag.
-type Tag struct {
-	Id   *int64  `json:"id,omitempty"`
-	Name *string `json:"name,omitempty"`
-}
-
-// Error defines model for error.
-type Error struct {
-	Code    *int64 `json:"code,omitempty"`
-	Message string `json:"message"`
-}
-
-// Quote defines model for quote.
-type Quote struct {
-	City      *string   `json:"city,omitempty"`
-	Email     string    `json:"email"`
-	Firstname *string   `json:"firstname,omitempty"`
-	Id        int64     `json:"id"`
-	Lastname  *string   `json:"lastname,omitempty"`
-	Phone     *string   `json:"phone,omitempty"`
-	Postcode  *string   `json:"postcode,omitempty"`
-	Street    *string   `json:"street,omitempty"`
-	Suburb    *string   `json:"suburb,omitempty"`
-	Tags      *[]Tag    `json:"tags,omitempty"`
-	Windows   *[]Window `json:"windows,omitempty"`
-}
-
-// Window defines model for window.
-type Window struct {
-	Height   int     `json:"height"`
-	Material string  `json:"material"`
-	Name     string  `json:"name"`
-	Notes    *string `json:"notes,omitempty"`
-	Panel    int     `json:"panel"`
-	Price    float32 `json:"price"`
-	Width    int     `json:"width"`
-}
-
-// AddQuoteJSONBody defines parameters for AddQuote.
-type AddQuoteJSONBody Quote
-
-// DeleteQuoteParams defines parameters for DeleteQuote.
-type DeleteQuoteParams struct {
-	ApiKey *string `json:"api_key,omitempty"`
-}
-
-// UpdateQuoteByIdJSONBody defines parameters for UpdateQuoteById.
-type UpdateQuoteByIdJSONBody Quote
-
-// AddQuoteRequestBody defines body for AddQuote for application/json ContentType.
-type AddQuoteJSONRequestBody AddQuoteJSONBody
-
-// UpdateQuoteByIdRequestBody defines body for UpdateQuoteById for application/json ContentType.
-type UpdateQuoteByIdJSONRequestBody UpdateQuoteByIdJSONBody
-
