# api/store-types.go
@@ -1,0 +1,88 @@
+// Package api provides primitives to interact the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
+package api
+
+// Address defines model for address.
+type Address struct {
+	City     string `json:"city"`
+	Postcode string `json:"postcode"`
+	Street   string `json:"street"`
+	Suburb   string `json:"suburb"`
+}
+
+// Customer defines model for customer.
+type Customer struct {
+	Address   map[string]interface{} `json:"address"`
+	Email     string                 `json:"email"`
+	Firstname string                 `json:"firstname"`
+	Id        *int32                 `json:"id,omitempty"`
+	Lastname  string                 `json:"lastname"`
+	Phone     string                 `json:"phone"`
+}
+
+// Error defines model for error.
+type Error struct {
+	Code    int32  `json:"code"`
+	Message string `json:"message"`
+}
+
+// Quote defines model for quote.
+type Quote struct {
+	CustomerId int       `json:"customerId"`
+	Id         *int32    `json:"id,omitempty"`
+	Tags       *[]Tag    `json:"tags,omitempty"`
+	Windows    *[]Window `json:"windows,omitempty"`
+}
+
+// Tag defines model for tag.
+type Tag struct {
+	Id   *int32  `json:"id,omitempty"`
+	Name *string `json:"name,omitempty"`
+}
+
+// Window defines model for window.
+type Window struct {
+	Height   int     `json:"height"`
+	Material string  `json:"material"`
+	Name     string  `json:"name"`
+	Notes    *string `json:"notes,omitempty"`
+	Panel    int     `json:"panel"`
+	Price    float32 `json:"price"`
+	Width    int     `json:"width"`
+}
+
+// AddCustomerJSONBody defines parameters for AddCustomer.
+type AddCustomerJSONBody Customer
+
+// DeleteCustomerParams defines parameters for DeleteCustomer.
+type DeleteCustomerParams struct {
+	ApiKey *string `json:"api_key,omitempty"`
+}
+
+// UpdateCustomerByIDJSONBody defines parameters for UpdateCustomerByID.
+type UpdateCustomerByIDJSONBody Customer
+
+// AddQuoteJSONBody defines parameters for AddQuote.
+type AddQuoteJSONBody Quote
+
+// DeleteQuoteParams defines parameters for DeleteQuote.
+type DeleteQuoteParams struct {
+	ApiKey *string `json:"api_key,omitempty"`
+}
+
+// UpdateQuoteByIDJSONBody defines parameters for UpdateQuoteByID.
+type UpdateQuoteByIDJSONBody Quote
+
+// AddCustomerRequestBody defines body for AddCustomer for application/json ContentType.
+type AddCustomerJSONRequestBody AddCustomerJSONBody
+
+// UpdateCustomerByIDRequestBody defines body for UpdateCustomerByID for application/json ContentType.
+type UpdateCustomerByIDJSONRequestBody UpdateCustomerByIDJSONBody
+
+// AddQuoteRequestBody defines body for AddQuote for application/json ContentType.
+type AddQuoteJSONRequestBody AddQuoteJSONBody
+
+// UpdateQuoteByIDRequestBody defines body for UpdateQuoteByID for application/json ContentType.
+type UpdateQuoteByIDJSONRequestBody UpdateQuoteByIDJSONBody
+
