# api/swagger.yml
@@ -22,6 +22,67 @@ tags:
     description: Find out more
     url: http://swagger.io
 paths:
+  /customer:
+    get:
+      tags:
+      - customer
+      summary: Get all customers
+      description: Returns all customers
+      operationId: getCustomers
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/xml:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/customer'
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/customer'
+        400:
+          description: No customers found
+          content: {}
+        404:
+          description: No customers found
+          content: {}
+    post:
+      tags:
+      - customer
+      summary: Add a new customer
+      operationId: addCustomer
+      requestBody:
+        description: Customer object that needs to be added to the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/customer'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/customer'
+        required: true
+      responses:
+        200:
+          description: list the customers
+          content:
+            application/xml:
+              schema:
+                  $ref: '#/components/schemas/customer'
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/customer'
+        default:
+          description: generic error response
+          content:
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/error'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
   /quote:
     get:
       tags:
@@ -49,8 +110,6 @@ paths:
         404:
           description: No quotes found
           content: {}
-      security:
-      - userToken: []
     post:
       tags:
       - quote
@@ -68,17 +127,13 @@ paths:
         required: true
       responses:
         200:
-          description: list the quote operations
+          description: list the quotes
           content:
             application/xml:
               schema:
-                type: array
-                items:
                   $ref: '#/components/schemas/quote'
             application/json:
               schema:
-                type: array
-                items:
                   $ref: '#/components/schemas/quote'
         default:
           description: generic error response
@@ -89,16 +144,101 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/error'
-      security:
-      - userToken: []
-      x-codegen-request-body-name: Quote
+  /customer/{customerId}:
+    get:
+      tags:
+      - customer
+      summary: Find customer by ID
+      description: Returns a single customer
+      operationId: getCustomerByID
+      parameters:
+      - name: customerId
+        in: path
+        description: ID of customer to return
+        required: true
+        schema:
+          type: integer
+          format: int32
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/customer'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/customer'
+        400:
+          description: Invalid ID supplied
+          content: {}
+        404:
+          description: Quote not found
+          content: {}
+    post:
+      tags:
+      - quote
+      summary: Update an existing customer
+      operationId: updateCustomerByID
+      parameters:
+      - in: path
+        name: customerId
+        description: ID of customer that needs to be updated
+        required: true
+        schema:
+          type: integer
+          format: int32
+      requestBody:
+        description: Customer object that needs to be added to the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/customer'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/customer'
+        required: true
+      responses:
+        400:
+          description: Invalid ID supplied
+          content: {}
+        404:
+          description: Customer not found
+          content: {}
+        405:
+          description: Validation exception
+          content: {}
+    delete:
+      tags:
+      - quotecustoemr
+      summary: Delete a customer
+      operationId: deleteCustomer
+      parameters:
+      - name: api_key
+        in: header
+        schema:
+          type: string
+      - name: customerId
+        in: path
+        description: Customer id to delete
+        required: true
+        schema:
+          type: integer
+          format: int32
+      responses:
+        400:
+          description: Invalid ID supplied
+          content: {}
+        404:
+          description: Customer not found
+          content: {}
   /quote/{quoteId}:
     get:
       tags:
       - quote
       summary: Find quote by ID
       description: Returns a single quote
-      operationId: getQuoteById
+      operationId: getQuoteByID
       parameters:
       - name: quoteId
         in: path
@@ -106,7 +246,7 @@ paths:
         required: true
         schema:
           type: integer
-          format: int64
+          format: int32
       responses:
         200:
           description: successful operation
@@ -123,21 +263,19 @@ paths:
         404:
           description: Quote not found
           content: {}
-      security:
-      - userToken: []
     post:
       tags:
       - quote
       summary: Update an existing quote
-      operationId: updateQuoteById
+      operationId: updateQuoteByID
       parameters:
-      - name: quoteId
-        in: path
+      - in: path
+        name: quoteId
         description: ID of quote that needs to be updated
         required: true
         schema:
           type: integer
-          format: int64
+          format: int32
       requestBody:
         description: Quote object that needs to be added to the store
         content:
@@ -158,9 +296,6 @@ paths:
         405:
           description: Validation exception
           content: {}
-      security:
-      - userToken: []
-      x-codegen-request-body-name: body
     delete:
       tags:
       - quote
@@ -177,7 +312,7 @@ paths:
         required: true
         schema:
           type: integer
-          format: int64
+          format: int32
       responses:
         400:
           description: Invalid ID supplied
@@ -185,65 +320,41 @@ paths:
         404:
           description: Quote not found
           content: {}
-      security:
-      - userToken: []
 components:
   schemas:
-    Tag:
+    tag:
       type: object
       properties:
         id:
           type: integer
-          format: int64
+          format: int32
         name:
           type: string
       xml:
-        name: Tag
+        name: tag
     quote:
       required:
-      - email
-      - id
+      - customerId
       type: object
       properties:
         id:
           type: integer
-          format: int64
-        firstname:
-          type: string
-          example: John
-        lastname:
-          type: string
-          example: Doe
-        street:
-          type: string
-          example: 18 Acacia Avenue
-        suburb:
-          type: string
-          example: Epping
-        city:
-          type: string
-          example: Sydney
-        postcode:
-          type: string
-          example: "2121"
-        phone:
-          type: string
-          example: "0404123456"
+          format: int32
+          example: 1000
+        customerId:
+          type: integer
         windows:
           type: array
           example: ""
           items:
             $ref: '#/components/schemas/window'
-        email:
-          type: string
-          example: JohnDoe@home.net
         tags:
           type: array
           xml:
             name: tag
             wrapped: true
           items:
-            $ref: '#/components/schemas/Tag'
+            $ref: '#/components/schemas/tag'
       xml:
         name: quote
     window:
@@ -277,14 +388,54 @@ components:
         panel:
           type: integer
           example: 3
+    customer:
+      required:
+      - email
+      - firstname
+      - lastname
+      - address
+      - phone
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+          example: 1000
+        email: 
+          type: string
+        firstname: 
+          type: string
+        lastname: 
+          type: string
+        address: 
+          type: object
+          items:
+            $ref: '#/components/schemas/address'
+        phone: 
+          type: string
+    address: 
+      required:
+      - street
+      - suburb
+      - city
+      - postcode
+      properties:
+        street: 
+          type: string
+        suburb: 
+          type: string
+        city: 
+          type: string
+        postcode: 
+          type: string
     error:
       required:
+      - code
       - message
-      type: object
       properties:
         code:
           type: integer
-          format: int64
+          format: int32
         message:
           type: string
     ApiResponse:
@@ -297,8 +448,3 @@ components:
           type: string
         message:
           type: string
-  securitySchemes:
-    userToken:
-      type: apikey
-      in: header
-      name: Authorization
